# dj3nk

./: .coveragerc  HISTORY.md  LICENSE  MANIFEST.in  Makefile  README.md  README_ZH.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
dj3nk/: __init__.py  natural_key_generator.py  nk_model.py
scripts/: coverage.sh  deploy_redis.sh
test_project/test_app/: models.py  tests.py
test_project/test_app/migrations/: 0001_initial.py
tests/: .coveragerc  README.md
tests/test_app/: models.py  tests.py
tests/test_app/migrations/: 0001_initial.py
tests/test_project/: settings.py
