[metadata]
name = dj3nk
version = attr: dj3nk.__version__
url = https://gitee.com/three-kinds/dj3nk
author = three-kinds
author_email = 3179158552@qq.com
description = A simple natural key generator base on redis.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
    Framework :: Django

project_urls =
    Documentation = https://gitee.com/three-kinds/dj3nk
    Source = https://gitee.com/three-kinds/dj3nk

[options]
python_requires = >=3.8
packages = dj3nk
include_package_data = true
zip_safe = false
install_requires =
    a3redis >= 0.1.2
    dj3base >= 0.1.0
